# Authly

./: Cargo.toml  Dockerfile  LICENSE  README.md  ascii_art.txt  compose.yml  docker-compose.yml  installation.py  main.py  nginx.conf  pyproject.toml  requirements.txt  test.json  todo.md
authly/: Cargo.toml  Dockerfile  __init__.py  app.py
authly/api/: api_router.py
authly/api/user/: endpoint.py  endpoints.py  model.py  user.py
authly/core/: config.py
authly/core/utils/: object_id.py
authly/db/: mongo.py  redis.py
authly/security/authentication/: admin_auth.py
authly/src/: log.rs  main.rs
authly/src/routes/: index.html  index.rs  link.rs  mod.rs
backend/: Pipfile  README.md  __init__.py  app.py  config.json  hash.py  hashes.json  log.txt  pyproject.toml  requirements.txt  run.py
backend/api/: api_router.py
backend/api/api_v1/: api.py
backend/authly/: app.py  config.py
backend/authly/api/: api_router.py
backend/authly/config_temp/: config.json
backend/authly/core/: config.py  converter.py  hashing.py  log.py  object_id.py  password_validation.py  username_validation.py
backend/authly/crud/: crud_admin.py  crud_bubble.py  crud_container.py  crud_user.py
backend/authly/db/: mongo.py  redis.py
backend/authly/dependencies/: bubble.py  container.py
backend/authly/interface/: admin.py  bubble.py  container.py
backend/authly/models/: admin_crud_model.py  admin_model.py  application_model.py  bubble_model.py  container_model.py  key_model.py  user_model.py
backend/authly/tests/: mongo_test.py  redis_test.py
backend/config/: config.json
backend/core/: config.py  converter.py  hashing.py  log.py  object_id.py  password_validation.py  username_validation.py
backend/core/db/: mongo.py  redis.py
backend/test/: conftest.py  test_api_v1.py  test_app.py  test_backend_module.py  test_core_modules.py  test_hashing.py  test_validator.py
backend/test/api_v1/: test_authentication.py  (+1 more)
setup/: README.md  __init__.py  pyproject.toml
setup/app/: main.py
(+121 files in other folders)
