[tool.poetry]
name = "authly"
version = "0.1.0"
description = ""
authors = ["Ben <ben.arteii@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
hypercorn = {extras = ["trio"], version = "^0.16.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
