[package]
name = "authly"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [] }

tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tower-sessions = "0.12.2"
tokio = { version = "1.24", features = ["full"] }
tokio-postgres = "0.7.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.38"
serde_json = "1.0.117"

